src/App.css
*,
*::before,
*::after {
    box-sizing: border-box;
    margin: 0;
}

:root {
    /* LIGHT MODE  */
    --bg: hsl(33, 16%, 85%);
    --bg-light: hsl(33, 16%, 96%);
    --bg-dark: hsl(33, 16%, 70%);

    --primary-blue: hsl(236, 40%, 13%);
    --primary-blue-l: hsl(236, 40%, 23%);
    --primary-blue-d: hsl(236, 40%, 03%);

    --secondary-l: #F9A801;

    --bottom-wave: var(--primary-blue);
    --middle-wave: #253368;
    --top-wave: #2d428dff;

    --hover-l: hsla(36, 9%, 58%, 0.5);
    --white: #fff;

    /* DARK MODE  */
    --bg-d: hsl(236, 40%, 13%);
    --bg-dl: hsl(236, 40%, 23%);
    --bg-dd: hsl(236, 40%, 03%);

    --primary-d: hsl(33, 16%, 85%);
    --primary-dl: hsl(33, 16%, 96%);
    --primary-dd: hsl(33, 16%, 70%);

    --secondary-l: #F9A801;

    --bottom-wave-d: hsl(34, 10%, 61%);
    --middle-wave-d: var(--bg);
    --top-wave-d: hsl(42, 52%, 94%);


    --hover-d: hsla(37, 6%, 57%, 0.507);
    --black: #000;

    /* ------------------------------------------- */

    /* font families */
    --ff-heading: "Tac One", serif;
    --ff-body: "Montserrat", sans-serif;
    /* font sizes  */
    --fs-xs: clamp(0.75rem, 1vw, 0.85rem);
    --fs-sm: clamp(0.85rem, 1.2vw, 1rem);
    --fs-md: clamp(1rem, 2vw, 1.3rem);
    --fs-lg: clamp(1.3rem, 3vw, 1.8rem);
    --fs-xl: clamp(2.4rem, 4.5vw, 5.5rem);
    --fs-menu: clamp(3.5rem, 5vw, 8rem);

    /* padding  */
    --pd-button: 0.7rem 1.5rem;
    --pd-icon: 0.5rem;


    /* borders */
    --border-list: 1.5px dashed var(--clr-primary);
    --border-bottom: 1.5px solid var(--clr-primary);
    
    /* line height  */
    --lh-small: 1.5;
    --lh-big: 1.8;

    /* border-radius */
    --radius-small: 3px;
    --radius-button: 6px;
    --radius-large: 18px;
    --radius-max: 999px;
    --radius-full: 50%;

    /* box shadows */
    --shadow-button: box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
    --shadow-card: box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
    --shadow-card-smooth: box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
    --shadow-inverse: box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
    
    /* letter spacing  */
    --ls: 0.5px;
    --ls-big: 1.5px;

    /* transitions  */
    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
    --ease-bounce: cubic-bezier(.34,1.56,.64,1);
    --transition: 0.3s var(--ease-in-out);
    --transition-slow: 0.7s var(--ease-in-out);

    /* zindex */ 
    --z-back: -1;
    --z-base: 1;
    --z-header: 100;
    --z-menu: 200;
    --z-nav-button: 300;
    --z-waves: 400;
}


/* LIGHT MODE (DEFAULT)  */
:root {
    --clr-bg: var(--bg);
    --clr-bg-light: var(--bg-light);
    --clr-text: var(--primary-blue);
    --clr-primary: var(--primary-blue);
    --clr-primary-light: var(--primary-blue-l);
    --clr-primary-dark: var(--primary-blue-d);
    --clr-secondary: var(--secondary-l);
    --clr-border: var(--bg-dark);
    --clr-hover: var(--hover-l);
    --clr-button-text: var(--bg-light);
    --clr-bottom-wave: var(--bottom-wave);
    --clr-middle-wave: var(--middle-wave);
    --clr-top-wave: var(--top-wave);
    --clr-boatWood: var(--white);
}
/* DARK MODE  */
:root.dark {
    --clr-bg: var(--bg-d);
    --clr-bg-light: var(--bg-dl);
    --clr-text: var(--primary-d);
    --clr-primary: var(--primary-d);
    --clr-primary-light: var(--primary-dl);
    --clr-primary-dark: var(--primary-dd);
    --clr-secondary: var(--secondary-l);
    --clr-border: var(--bg-dd);
    --clr-hover: var(--hover-d);
    --clr-button-text: var(--bg-dl);
    --clr-middle-wave: var(--middle-wave-d);
    --clr-top-wave: var(--top-wave-d);
    --clr-bottom-wave: var(--bottom-wave-d);
    --clr-boatWood: var(--black);
}




html {  
  -webkit-tap-highlight-color: transparent; 
}

@media (hover: hover) and (pointer: fine) {
  * {
    scrollbar-width: thin;
    scrollbar-color: var(--clr-primary) transparent;
  }

  ::-webkit-scrollbar {
    width: 8px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: var(--clr-primary);
    border-radius: var(--radius-max);
  }

  ::-webkit-scrollbar-thumb:hover {
    background-color: var(--clr-secondary);
  }
}


body {
    background: var(--clr-bg);
    font-family: var(--ff-body);
    color: var(--clr-text);
}


h1:not(#mainTitle) {
   font-size: var(--fs-menu);
}
h1:not(#mainTitle),
h3 {
    font-family: var(--ff-heading);
}

p {
    font-size: var(--fs-md);
    line-height: var(--lh-small);
    max-width: 74ch;
}

#navLinks {
    text-decoration: none;
    color: var(--clr-primary);
}

button,
a:not(#navLinks) {
    padding: var(--pd-button);
    border-radius: var(--radius-button);
    letter-spacing: var(--ls);
    transition: var(--transition);
    font-weight: 600;
    text-decoration: none;
    width: fit-content;
    font-size: var(--fs-md);
    cursor: pointer;
}
@media (width >= 1600px) {
    button, a {
        font-size: var(--fs-lg);
    }
}

/* Button Primary (line border, get's drowned by waves on hover) */
.buttonPrimary,
a.buttonPrimary {
    background: transparent;
    border: 2px solid var(--clr-border);
    box-shadow: var(--shadow-inverse);
    color: var(--clr-primary);
}.buttonPrimary:hover,
a .buttonPrimary:hover {
    background: var(--clr-primary);
    color: var(--clr-button-text);
}
.buttonPrimary:active,
a .buttonPrimary:active {
    background-color: var(--clr-primary-dark);
}

.textShadow {
    background: linear-gradient(0deg, #14162f, #F9A801);
    background-clip: text;
    -webkit-text-fill-color: transparent;
    text-shadow: 2px 1px #F9A801;
}




/* BOAT in NavMenu */
.boatLayer {
  position: fixed;
  left: 0;
  bottom: 22px;   
  z-index: 600;
  pointer-events: none;
}

@media (600px <= width <= 767px) {
    .boatLayer {
        bottom: 30px;
    }
}
/* Tablet */
@media (768px <= width <= 1023px) {
    .boatLayer {
        bottom: 47px;
    }
}
/* Desktop S */
@media (1024px <= width <= 1279px) {
    .boatLayer {
        bottom: 65px;
    }
}
/* Desktop M/L */
@media (1280px <= width <= 1599px) {
    .boatLayer {
        bottom: 80px;
    }
}
/* Extra Large Screens */
@media (width >= 1600px) {
    .boatLayer {
        bottom: 125px;
    }
}


/* wave text underline animation  */
.waveText {
  position: relative;
  display: inline-block;
  cursor: pointer;
}
/* wave underline */
.waveText::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: -0.2em;

  width: 100%;
  height: 8px;

  background-color: var(--clr-primary);

  -webkit-mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 8'><path d='M0 4 Q 10 0 20 4 T 40 4 T 60 4 T 80 4 T 100 4 T 120 4' fill='none' stroke='white' stroke-width='1.5' stroke-linecap='round'/></svg>");
  -webkit-mask-repeat: repeat-x;
  -webkit-mask-size: 120px 8px;

  mask-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 120 8'><path d='M0 4 Q 10 0 20 4 T 40 4 T 60 4 T 80 4 T 100 4 T 120 4' fill='none' stroke='white' stroke-width='1.5' stroke-linecap='round'/></svg>");
  mask-repeat: repeat-x;
  mask-size: 120px 8px;

  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.4s var(--ease-in-out);
  pointer-events: none;
}

.waveText:hover::after {
  transform: scaleX(1);
  animation: waveMove 1.5s linear infinite;
}

@keyframes waveMove {
  from {
    -webkit-mask-position-x: 0;
    mask-position-x: 0;
  }
  to {
    -webkit-mask-position-x: 120px;
    mask-position-x: 120px;
  }
}

